# hina_bot

./: .env  .env.prod  .gitattributes  README.md  bot.py  open_baidu.py  pyproject.toml  requirements.txt
accounts/2293348860/: config.yml  device.json
accounts/2293348860/dumps/: 1681296089.dump
accounts/binary/: accounts.json  accounts.pkl
cq-http/: README.md  config.yml  device.json  session.token
cq-http/data/images/: 000172.ldb  000173.ldb  000176.ldb  LOG  MANIFEST-000180
cq-http/data/leveldb-v3/: 000171.ldb  000172.ldb  000175.ldb  000178.ldb  LOG  MANIFEST-000182
cq-http/data/videos/: 000010.ldb  000027.ldb  000060.ldb  LOG  MANIFEST-000078
cq-http/data/voices/: 4D1BC2BACB344657316B2B2614BD0FB3.amr
data/BingChat/: cookiestemp.json
data/BingChat/cookies/: cookies.json
data/coin_system/: coin.system.db  coin.system.db-shm
data/color_image/data/: cd.json
data/color_imgae/data/: cd.json
data/fortune_resource/: fortune_data.json  group_rules.json
data/gspanel/: qq-uid.json
data/gspanel/cache/: 103781947.json  238579936.json  248942672.json
data/learning_chat/: learning_chat.db  learning_chat.yml
data/mazui_study/resource/: mazui_state.json
data/morning/: morning.json
data/steam_group/: group_list.json
data/summon/: userinfo.json
src/plugins/coin_system/: __init__.py  config.py  models.py  utils.py
src/plugins/color_image/: Dockerfile  __init__.py  config.py  utils.py
src/plugins/csgo-case-simulator/: __init__.py  utils.py
src/plugins/daily_math/: __init__.py  test.py  utils.py
src/plugins/fortune/: __init__.py  config.py
(+30 files in other folders)
